@@ -1099,4 +1099,12 @@ public class TestJoinQuery extends QueryTestCaseBase {
       executeString("DROP TABLE large_table PURGE").close();
     }
   }
+
+  @Test
+  public final void testJoinFilterOfRowPreservedTable1() throws Exception {
+    // this test is for join filter of a row preserved table.
+    ResultSet res = executeQuery();
+    assertResultSet(res);
+    cleanupQuery(res);
+  }
 }
